Fix anchor not covering entier card image

--- a/assets/css/3-layouts/_projects.sass
+++ b/assets/css/3-layouts/_projects.sass
@@ -22,6 +22,13 @@ section#projects
   .project-card
     margin: 20px
 
+  .project-link
+    position: absolute
+    left: 0
+    height: 0
+    width: 100%
+    height: 100%
+
   figure
   	position: relative
   	overflow: hidden
